--- a/fleet/rancher-monitoring-crd/fleet.yaml
+++ b/fleet/rancher-monitoring-crd/fleet.yaml
@@ -1,4 +1,4 @@
 defaultNamespace: cattle-monitoring-system
 helm:
-  chart: https://github.com/rancher/charts/raw/release-v2.8/assets/rancher-monitoring-crd/rancher-monitoring-crd-102.0.1+up40.1.2.tgz
+  chart: https://charts.rancher.io/assets/rancher-monitoring-crd/rancher-monitoring-crd-102.0.1+up40.1.2.tgz
   releaseName: rancher-monitoring-crd
