--- a/fleet/rancher-monitoring/fleet.yaml
+++ b/fleet/rancher-monitoring/fleet.yaml
@@ -1,6 +1,6 @@
 defaultNamespace: cattle-monitoring-system
 helm:
-  chart: https://github.com/rancher/charts/raw/release-v2.8/assets/rancher-monitoring/rancher-monitoring-102.0.1+up40.1.2.tgz
+  chart: https://charts.rancher.io/assets/rancher-monitoring/rancher-monitoring-102.0.1+up40.1.2.tgz
   releaseName: rancher-monitoring
   values:
     global:
