--- a/fleet/rancher-nfs/fleet.yaml
+++ b/fleet/rancher-nfs/fleet.yaml
@@ -3,7 +3,7 @@ helm:
   releaseName: rancher-nfs-sc
   repo: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner/
   chart: nfs-subdir-external-provisioner
-  version: 4.0.18
+  version: v4.0.18
   values:
     nfs:
       server: 10.0.0.12
