--- a/fleet/rancher-nfs/fleet.yaml
+++ b/fleet/rancher-nfs/fleet.yaml
@@ -5,18 +5,8 @@ helm:
   values:
     storageClass:
       name: nfs-client-0
-      provisionerName: k8s-sigs.io/nfs-subdir-external-provisioner-0
+      provisionerName: cluster-local/nfs-subdir-external-provisioner-0
     nfs:
       server: 10.0.0.12
       path: /nfs
       
-helm:
-  repo: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner/
-  chart: nfs-subdir-external-provisioner
-  values:
-    storageClass:
-      name: nfs-client-1
-      provisionerName: k8s-sigs.io/nfs-subdir-external-provisioner-1
-    nfs:
-      server: 10.0.0.12
-      path: /nfs2
