--- a/fleet/rancher-nfs-first-sc/fleet.yaml
+++ b/fleet/rancher-nfs-first-sc/fleet.yaml
@@ -12,8 +12,7 @@ helm:
     storageClass:
       name: nfs-client-0
       provisionerName: cluster-local/nfs-subdir-external-provisioner-0
-      parameters:
-        onDelete: Retain
+      reclaimPolicy: Retain
     nfs:
       server: 10.0.0.12
       path: /nfs
