--- a/fleet/rancher-nfs-second-sc/fleet.yaml
+++ b/fleet/rancher-nfs-second-sc/fleet.yaml
@@ -6,6 +6,7 @@ helm:
     storageClass:
       name: nfs-client-1
       provisionerName: cluster-local/nfs-subdir-external-provisioner-1
+      reclaimPolicy: Retain
     nfs:
       server: 10.0.0.12
       path: /nfs2
