--- a/edge-image-builder/network/J901AB4E.yaml
+++ b/edge-image-builder/network/J901AB4E.yaml
@@ -3,7 +3,7 @@ routes:
   - destination: 0.0.0.0/0
     metric: 100
     next-hop-address: 10.21.11.254
-    next-hop-interface: eth0
+    next-hop-interface: egress-bond0
     table-id: 254
 dns-resolver:
   config:
@@ -24,7 +24,7 @@ interfaces:
         miimon: '140'
       port:
         - eth0
-#        - eth1
+#        - eth5
   - name: eth0
     type: ethernet
     state: up
@@ -33,7 +33,7 @@ interfaces:
       enabled: false
     ipv6:
       enabled: false
-#  - name: eth1
+#  - name: eth5
 #    type: ethernet
 #    state: up
 #    mac-address: 
