--- a/edge-image-builder/eib-definition.yaml
+++ b/edge-image-builder/eib-definition.yaml
@@ -16,4 +16,6 @@ operatingSystem:
     packageList:
     - jq
     - git
+    - open-lldp
+    - bind-utils
     sccRegistrationCode: {{ sccRegCode }}
