--- a/edge-image-builder/network/J901A55H.yaml
+++ b/edge-image-builder/network/J901A55H.yaml
@@ -2,7 +2,7 @@ routes:
   config:
   - destination: 0.0.0.0/0
     metric: 100
-    next-hop-address: 10.21.11.254
+    next-hop-address: 10.20.11.254
     next-hop-interface: egress-bond0
     table-id: 254
 dns-resolver:
@@ -15,7 +15,7 @@ interfaces:
     state: up
     ipv4:
       address:
-        - ip: 10.21.11.3
+        - ip: 10.20.11.32
           prefix-length: 24
       enabled: true
     link-aggregation:
@@ -39,5 +39,29 @@ interfaces:
     mac-address: 04:32:01:60:cd:22
     ipv4:
       enabled: false
+    ipv6:
+      enabled: false
+  - name: gignic0
+    type: ethernet
+    state: up
+    mac-address: 04:32:01:60:cd:20
+    ipv4:
+      address:
+      - ip: 10.21.1.3
+        prefix-length: 24
+      dhcp: false
+      enabled: true
+    ipv6:
+      enabled: false
+  - name: gignic1
+    type: ethernet
+    state: up
+    mac-address: 00:62:0b:0d:c3:e9
+    ipv4:
+      address:
+      - ip: 10.21.10.3
+        prefix-length: 24
+      dhcp: false
+      enabled: true
     ipv6:
       enabled: false
