--- a/fleet/rancher-monitoring-crd/fleet.yaml
+++ b/fleet/rancher-monitoring-crd/fleet.yaml
@@ -1,4 +1,5 @@
 defaultNamespace: cattle-monitoring-system
 helm:
-  chart: https://charts.rancher.io/assets/rancher-monitoring-crd/rancher-monitoring-crd-102.0.1+up40.1.2.tgz
+  repo: https://git.rancher.io/charts
+  chart: rancher-monitoring-crd
   releaseName: rancher-monitoring-crd
